--- a/css/styles.css
+++ b/css/styles.css
@@ -1,245 +1,3 @@
-/*.skills{
-
-    display: inline;
-    width: 45%;
-    padding-top: 1em;
-    padding-bottom: 1em;
-    margin-bottom: 2em;
-    background-color: tan;
-    }
-
-div.skills h3{
-    text-align: center;
-    text-transform: uppercase;
-    font-family:Arial, Helvetica, sans-serif;
+.checked {
+  color: orange;
 }
-
-ul{
-    list-style: none;
-}
-
-.main-sections{
-     padding: 4em;
-}
-
-.into-section{
-    
-}*/
-body {
-  margin: 0;
-  background-color: #87a7b3;
-}
-
-/* .container {
-  margin: 2em;
-  letter-spacing: 2px;
-}
-
-.brand {
-  color: white;
-  font-size: 1.75em;
-  letter-spacing: 2px;
-  margin-right: 50%;
-  text-decoration: none;
-  display: inline;
-}
-
-.brand:hover {
-  background-color: #cdc7be;
-}
-
-.nav {
-  /* background-color: rgb(41, 61, 73);
-  
-  background-color: #cdc7be;
-  margin: 0;
-  padding: 1em;
-  color: #e1f1dd;
-}
-
-.nav ul {
-  list-style: none;
-  display: inline;
-}
-
-.nav li {
-  display: inline;
-  margin-right: 1em;
-}
-
-a:hover {
-  background-color: #e1f1dd;
-}
-
-li a {
-  /*color: #ebebbf;
-  color: #fff;
-  text-decoration: none;
-  letter-spacing: 3px;
-  padding: 8px;
-  font-size: 18px;
-}
-
-.welcome {
-  text-align: center;
-  margin-top: 18%;
-  margin-bottom: 18%;
-  color: #e1f1dd;
-}
-.welcome h1 {
-  margin-bottom: 8px;
-  letter-spacing: 2px;
-  font-size: 48px;
-}
-
-.welcome p {
-  font-size: 22px;
-}
-
-.welcome input {
-  font-size: 18px;
-  letter-spacing: 2px;
-  padding: 2em;
-}
-
-.welcome input {
-  background-color: #766161;
-  color: #fff;
-  padding: 16px;
-}
-
-.skills {
-  margin-bottom: 10%;
-  text-align: center;
-  /* color: #e1f1dd; 
-}
-
-.skills h3 {
-  background-color: #cdc7be;
-  color: #fff;
-  letter-spacing: 3px;
-  padding: 8px;
-  font-size: 18px;
-  margin-block-start: 0;
-}
-
-.skills ol {
-  list-style: none;
-}
-
-.front-end {
-  display: inline-block;
-  width: 45%;
-  background-color: #e1f1dd;
-}
-
-.back-end {
-  display: inline-block;
-  width: 45%;
-  background-color: #e1f1dd;
-}
-
-/* projects 
-
-.project {
-  background-color: #e1f1dd;
-  display: inline-block;
-  width: 45%;
-  height: 250px;
-  margin-bottom: 0.5em;
-}
-
-#projects h2 {
-  text-align: center;
-}
-
-.project h3 {
-  background-color: #cdc7be;
-  color: #fff;
-  letter-spacing: 3px;
-  padding: 8px;
-  font-size: 18px;
-  margin-block-start: 0;
-}
-
-#projects {
-  text-align: center;
-  margin-bottom: 10%;
-  color: #e1f1dd;
-}
-
-/* let's connect 
-
-#connect {
-  text-align: center;
-}
-
-.input-form {
-  display: block;
-  width: 95%;
-  padding: 1em;
-  margin-bottom: 8px;
-  background-color: #e1f1dd;
-}
-
-.contact {
-  display: inline-block;
-  width: 40%;
-  height: 150px;
-}
-
-.btn-connect {
-  background-color: #cdc7be;
-  color: #fff;
-  padding: 16px;
-  display: block;
-  width: 100%;
-}
-
-.map {
-  width: 100%;
-  background-color: #cdc7be;
-  height: 150px;
-  font-size: 22px;
-  letter-spacing: 2px;
-  word-spacing: 2px;
-  color: #e1f1dd;
-}
-
-.one {
-  width: 10%;
-  height: 50px;
-  background-color: #766161;
-  color: #766161;
-  display: inline-block;
-  margin-top: 4px;
-}
-
-.two {
-  width: 10%;
-  height: 50px;
-  background-color: #87a7b3;
-  color: #87a7b3;
-  display: inline-block;
-  margin-block-start: 0;
-  margin-top: 4px;
-}
-
-.three {
-  width: 10%;
-  height: 50px;
-  background-color: #cdc7be;
-  color: #cdc7be;
-  display: inline-block;
-  margin-top: 4px;
-}
-
-.four {
-  width: 10%;
-  height: 50px;
-  background-color: #e1f1dd;
-  color: #e1f1dd;
-  display: inline-block;
-  margin-left: auto;
-  margin-top: 4px;
-} */
